--- a/Four-card/index.html
+++ b/Four-card/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,29 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Four Card</title>
 </head>
+
 <body>
-    
+    <section class="container">
+
+        <!-- Titres -->
+
+        <header>
+            <h1 class="light">Reliable, efficient, delivery</h1>
+            <h1 class="bold">Powered by Technology</h1>
+            <p>Our Artificial Intelligence powered tools use millions
+                of project data<br /> points to ensure that your project is successful </p>
+        </header>
+
+        <!-- Cartes -->
+        <div class="card-container">
+            <section class="card">
+                <article class="team"></article>
+                <article class="supervisor"></article>
+                <article class=" karma"></article>
+                <article class="calculator"></article>
+            </section>
+        </div>
+    </section>
 </body>
+
 </html>
