--- a/Four-card/index.html
+++ b/Four-card/index.html
@@ -24,10 +24,30 @@
         <!-- Cartes -->
         <div class="card-container">
             <section class="card">
-                <article class="team"></article>
-                <article class="supervisor"></article>
-                <article class=" karma"></article>
-                <article class="calculator"></article>
+                <article class="team">
+                    <div class="container-card">
+                        <h2>Team Builder</h2>
+                        <p>Scan our talent network to create the optimal team for your project</p>
+                    </div>
+                </article>
+                <article class="supervisor">
+                    <div class="container-card">
+                        <h2>Supervisor</h2>
+                        <p>Monitors activity to identify project roadblocks</p>
+                    </div>
+                </article>
+                <article class=" karma">
+                    <div class="container-card">
+                        <h2>Karma</h2>
+                        <p>Regulary evaluates our talent to ensure quality</p>
+                    </div>
+                </article>
+                <article class="calculator">
+                    <div class="container-card">
+                        <h2>Calculator</h2>
+                        <p>Uses data from past projects to provide better delivery estimates</p>
+                    </div>
+                </article>
             </section>
         </div>
     </section>
