--- a/Four-card/index.html
+++ b/Four-card/index.html
@@ -27,28 +27,28 @@
                 <article class="team">
                     <div class="container-card">
                         <h2>Team Builder</h2>
-                        <p>Scan our talent network to create the optimal team for your project</p>
+                        <p>Scan our talent network to create the<br /> optimal team for your project</p>
                         <img src="images/homepage.svg" class="card-img">
                     </div>
                 </article>
                 <article class="supervisor">
                     <div class="container-card">
                         <h2>Supervisor</h2>
-                        <p>Monitors activity to identify project roadblocks</p>
+                        <p>Monitors activity to identify project<br /> roadblocks</p>
                         <img src="images/magnifying-glass.svg" class="card-img" />
                     </div>
                 </article>
                 <article class=" karma">
                     <div class="container-card">
                         <h2>Karma</h2>
-                        <p>Regulary evaluates our talent to ensure quality</p>
+                        <p>Regulary evaluates our talent to ensure<br /> quality</p>
                         <img src="images/idea.svg" class="card-img">
                     </div>
                 </article>
                 <article class="calculator">
                     <div class="container-card">
                         <h2>Calculator</h2>
-                        <p>Uses data from past projects to provide better delivery estimates</p>
+                        <p>Uses data from past projects to provide<br /> better delivery estimates</p>
                         <img src="images/computing.svg" class="card-img">
                     </div>
                 </article>
